# poetry_project_template

./: .gitignore  README.md  git-conventional-commits.json  pyproject.toml
.github/workflows/: qa.yml
src/project_name/: main.py
