[tool.poetry]
name = "project_name"
version = "0.0.0"
description = "PROJECT DESCRIPTION"
authors = ["AUTHOR 1 <author1@email.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = "^21.4b2"
flake8 = "^3.9.1"
mypy = "^0.812"

[tool.poetry.scripts]
project_cli = "project_name.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
